<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aboutus.AboutUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/clgimage"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="fitXY"
            android:src="@drawable/vitbhopallogo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="12sp"
            android:layout_marginTop="12sp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/aboutclg"
            android:textColor="@color/textColor"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/text_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/acre"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/text_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/caltech"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/text_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/ffcs"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/text_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/lab"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Branches offered :"
            android:layout_marginTop="36dp"
            android:textSize="@dimen/title_size1"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@font/poppinsemibold"/>

        <androidx.viewpager.widget.ViewPager
            android:padding="15dp"
            android:id="@+id/viewpager"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:foregroundGravity="center"
            android:clipToPadding="false"
            android:overScrollMode="never"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@color/darkColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="36dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Departments"
                    android:layout_marginTop="@dimen/text_margin"
                    android:textSize="@dimen/title_size1"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppinsbold"/>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sasl"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:textSize="@dimen/text_size1"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:layout_margin="8dp"
                            android:fontFamily="@font/poppinsemibold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/grey"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sbio"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:textSize="@dimen/text_size1"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:layout_margin="8dp"
                            android:fontFamily="@font/poppinsemibold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/grey"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="School of Computer Science"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:textSize="@dimen/text_size1"
                            android:textColor="@color/black"
                            android:layout_margin="8dp"
                            android:fontFamily="@font/poppinsemibold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/grey"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/seee"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:textSize="@dimen/text_size1"
                            android:textColor="@color/black"
                            android:layout_margin="8dp"
                            android:fontFamily="@font/poppinsemibold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/grey"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/smee"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:textSize="@dimen/text_size1"
                            android:textColor="@color/black"
                            android:layout_margin="8dp"
                            android:fontFamily="@font/poppinsemibold"/>

                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact Details :"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size1"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppinsemibold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vellore Institute of Technology, Bhopal"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size1"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppinsmedium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clg_address"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size1"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppinsmedium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clg_phone"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size1"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppinsmedium"/>

            <ImageView
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:src="@drawable/clgmap"/>


        </LinearLayout>

    </LinearLayout>



</androidx.core.widget.NestedScrollView>