<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundCol"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.smarteist.autoimageslider.SliderView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/sliderView"
                app:sliderScrollTimeInSec="3"
                app:sliderAnimationDuration="750"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorUnselectedColor="#c1c1c1"
                app:sliderIndicatorSelectedColor="#5A5858"
                app:sliderStartAutoCycle="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="VIT-B"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/title_size1"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppinsextrabold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutclg"
                android:layout_marginTop="12sp"
                android:layout_marginHorizontal="12sp"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppinsmedium"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Details :"
                    android:layout_marginTop="36dp"
                    android:textSize="@dimen/title_size1"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/poppinsbold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vellore Institute of Technology, Bhopal"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size1"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/poppinsemibold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clg_address"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size1"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/poppinsmedium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clg_phone"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size1"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/poppinsmedium"/>

                <ImageView
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="230dp"
                    android:src="@drawable/clgmap"/>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>